minor: added home link to consoles

--- a/src/static/management-console.html
+++ b/src/static/management-console.html
@@ -263,7 +263,10 @@
 
   <nav class="navbar navbar-dark mb-4">
     <div class="container">
-      <span class="navbar-brand">🏢 Management Console</span>
+      <div class="d-flex align-items-center gap-3">
+        <a href="index.html" class="btn btn-outline-light btn-sm">Home</a>
+        <span class="navbar-brand mb-0">🏢 Management Console</span>
+      </div>
       <div class="d-flex align-items-center gap-3">
         <input type="password" id="token" class="form-control form-control-sm" style="width: 250px" placeholder="Management Secret Key" autocomplete="off">
       </div>
