--- a/src/static/portal.html
+++ b/src/static/portal.html
@@ -359,7 +359,10 @@
   <section id="app-section">
     <nav class="navbar navbar-dark mb-4">
       <div class="container">
-        <span class="navbar-brand">📊 Data Entry Portal</span>
+        <div class="d-flex align-items-center gap-3">
+          <a href="index.html" class="btn btn-outline-light btn-sm">Home</a>
+          <span class="navbar-brand mb-0">📊 Data Entry Portal</span>
+        </div>
         <div class="user-info">
           <select id="provider-context" class="form-select form-select-sm provider-select" onchange="onProviderChange()">
             <option value="">-- Select Provider --</option>
