--- a/src/static/super-admin.html
+++ b/src/static/super-admin.html
@@ -12,6 +12,9 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" />
 </head>
 <body>
+  <div style="margin-bottom: 1rem;">
+    <a href="index.html" style="color: #e94560; text-decoration: none;">Home</a>
+  </div>
   <h1>Super Admin</h1>
   <p>
     This page is for directly accessing to underlying database.
