--- a/src/static/management-console.html
+++ b/src/static/management-console.html
@@ -265,7 +265,7 @@
     <div class="container">
       <div class="d-flex align-items-center gap-3">
         <a href="index.html" class="btn btn-outline-light btn-sm">Home</a>
-        <span class="navbar-brand mb-0">🏢 Management Console</span>
+        <span class="navbar-brand mb-0">Management Console</span>
       </div>
       <div class="d-flex align-items-center gap-3">
         <input type="password" id="token" class="form-control form-control-sm" style="width: 250px" placeholder="Management Secret Key" autocomplete="off">
@@ -281,13 +281,13 @@
 
     <ul class="nav nav-tabs mb-4" role="tablist">
       <li class="nav-item">
-        <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#users-tab" type="button">👤 Users</button>
+        <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#users-tab" type="button">Users</button>
       </li>
       <li class="nav-item">
-        <button class="nav-link" data-bs-toggle="tab" data-bs-target="#providers-tab" type="button">🏛️ Providers</button>
+        <button class="nav-link" data-bs-toggle="tab" data-bs-target="#providers-tab" type="button">Providers</button>
       </li>
       <li class="nav-item">
-        <button class="nav-link" data-bs-toggle="tab" data-bs-target="#permissions-tab" type="button">🔐 Permissions</button>
+        <button class="nav-link" data-bs-toggle="tab" data-bs-target="#permissions-tab" type="button">Permissions</button>
       </li>
     </ul>
 
