--- a/src/static/portal.html
+++ b/src/static/portal.html
@@ -361,7 +361,7 @@
       <div class="container">
         <div class="d-flex align-items-center gap-3">
           <a href="index.html" class="btn btn-outline-light btn-sm">Home</a>
-          <span class="navbar-brand mb-0">📊 Data Entry Portal</span>
+          <span class="navbar-brand mb-0">Data Entry Portal</span>
         </div>
         <div class="user-info">
           <select id="provider-context" class="form-select form-select-sm provider-select" onchange="onProviderChange()">
@@ -381,13 +381,13 @@
 
       <ul class="nav nav-tabs mb-4" role="tablist">
         <li class="nav-item">
-          <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#permissions-tab" type="button">🔐 My Permissions</button>
+          <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#permissions-tab" type="button">My Permissions</button>
         </li>
         <li class="nav-item">
-          <button class="nav-link" data-bs-toggle="tab" data-bs-target="#entry-tab" type="button">📝 Data Entry</button>
+          <button class="nav-link" data-bs-toggle="tab" data-bs-target="#entry-tab" type="button">Data Entry</button>
         </li>
         <li class="nav-item" id="settings-tab-nav" style="display: none;">
-          <button class="nav-link" data-bs-toggle="tab" data-bs-target="#settings-tab" type="button">⚙️ Provider Settings</button>
+          <button class="nav-link" data-bs-toggle="tab" data-bs-target="#settings-tab" type="button">Provider Settings</button>
         </li>
       </ul>
 
