refactor: small button refactor

--- a/src/static/portal.html
+++ b/src/static/portal.html
@@ -397,7 +397,7 @@
         <!-- Permissions Tab -->
         <div class="tab-pane fade show active" id="permissions-tab">
           <div class="card">
-            <div class="card-header">📋 Your Permissions for Selected Provider</div>
+            <div class="card-header">Your Permissions for Selected Provider</div>
             <div class="card-body">
               <p class="text small">These are the economies/regions and year ranges you can submit data for.</p>
               <div id="permissions-list">
@@ -413,7 +413,7 @@
             <!-- Lookup / Target Selection -->
             <div class="col-md-4">
               <div class="card">
-                <div class="card-header">🎯 Target Selection</div>
+                <div class="card-header">Target Selection</div>
                 <div class="card-body">
                   <div class="mb-3">
                     <label class="form-label text">Economy Code</label>
@@ -436,7 +436,7 @@
             <!-- Indicator Fields -->
             <div class="col-md-8">
               <div class="card">
-                <div class="card-header">📊 Indicator Data</div>
+                <div class="card-header">Indicator Data</div>
                 <div class="card-body">
                   <!-- Economic Indicators -->
                   <div class="indicator-group">
@@ -524,7 +524,7 @@
                   </div>
 
                   <button class="btn btn-success btn-lg w-100" onclick="submitIndicator()">
-                    💾 Save Indicator Data
+                    Save Indicator Data
                   </button>
                 </div>
               </div>
@@ -538,7 +538,7 @@
           <div class="row g-4">
             <div class="col-md-6">
               <div class="card">
-                <div class="card-header">⚙️ Provider Details</div>
+                <div class="card-header">Provider Details</div>
                 <div class="card-body">
                   <p class="text small">Update your provider's public information.</p>
                   <div class="mb-3">
@@ -554,7 +554,7 @@
                     <input type="url" id="settings-website" class="form-control" placeholder="https://example.org">
                   </div>
                   <button class="btn btn-primary w-100" onclick="updateProviderDetails()">
-                    💾 Save Details
+                    Save Details
                   </button>
                 </div>
               </div>
@@ -562,7 +562,7 @@
 
             <div class="col-md-6">
               <div class="card">
-                <div class="card-header">👤 Technical Account</div>
+                <div class="card-header">Technical Account</div>
                 <div class="card-body">
                   <p class="text small">Assign a technical account to handle data entry operations.</p>
                   <div class="mb-3">
@@ -577,7 +577,7 @@
                     <div class="form-text text small">Leave empty to keep current, enter 0 to clear.</div>
                   </div>
                   <button class="btn btn-warning w-100" onclick="updateTechnicalAccount()">
-                    🔄 Update Technical Account
+                    Update Technical Account
                   </button>
                 </div>
               </div>
