remove redundant details in index.html

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -234,12 +234,12 @@
 
         // Update table title
         const titles = {
-          'economies': 'Economies with Region & Income Level (JOIN regions, income_levels)',
-          'economic': 'Economic Indicators (JOIN economies, providers, regions)',
-          'health': 'Health Indicators (JOIN economies, providers, regions)',
-          'environment': 'Environment Indicators (JOIN economies, providers, regions)',
-          'providers': 'Providers with Admin & Technical Users (JOIN users)',
-          'all': 'All Indicators (JOIN economies, providers, regions, income_levels)'
+          'economies': 'Economies with Region & Income Level',
+          'economic': 'Economic Indicators',
+          'health': 'Health Indicators',
+          'environment': 'Environment Indicators',
+          'providers': 'Providers with Admin & Technical Users',
+          'all': 'All Indicators'
         };
         document.getElementById('table-title').textContent = titles[view];
 
